# yolo11-coreml

./: .gitignore  PROJECT_GUIDE.md  README.md
01_pytorch_setup/: README.md  requirements.txt  setup_environment.sh  test_pytorch_model.py
02_coreml_conversion/: README.md  accuracy_comparison.py  convert_and_validate.py  dataset_manager.py  requirements.txt
02_coreml_conversion/accuracy_results/: accuracy_comparison_1754284976.json  accuracy_report_1754284976.md
02_coreml_conversion/datasets/coco_val_sample/: dataset_info.json
02_coreml_conversion/scripts/: advanced_export.py  basic_export.py  original_export.py  validate_coreml.py
03_python_sdk/: README.md  pyproject.toml  setup.cfg  test_sdk.py
03_python_sdk/src/yolo_sdk/: __init__.py
04_swift_sdk/: README.md
04_swift_sdk/Sources/YOLOv11CoreMLSDK/: YOLOv11CoreMLSDK.swift  YOLOv11Predictor.swift
04_swift_sdk/Tests/YOLOv11CoreMLSDKTests/: YOLOv11CoreMLSDKTests.swift
